# VulkanSDL

./: .gitignore  .gitmodules  LICENSE  README.md
buildfiles/android/: cmake.py
buildfiles/android/jni/: Application.mk  CMakeLists.txt
buildfiles/android/jni/sdl2/: Android.mk
buildfiles/android/jni/sdl2app/: Android.mk
buildfiles/android/jni/sdl2image/: Android.mk
buildfiles/android/jni/sdl2ttf/: Android.mk
buildfiles/android/jni/sdl3/: Android.mk
buildfiles/android/jni/sdl3app/: Android.mk
buildfiles/android/jni/sdl3image/: Android.mk
buildfiles/android/jni/sdl3ttf/: Android.mk
buildfiles/apple/sdl2.xcodeproj/: project.pbxproj
buildfiles/apple/sdl2.xcodeproj/xcshareddata/xcschemes/: sdl2-ios.xcscheme  sdl2-mac.xcscheme
buildfiles/apple/sdl2app.xcodeproj/: project.pbxproj
buildfiles/apple/sdl2app.xcodeproj/xcshareddata/xcschemes/: sdlapp-ios.xcscheme  sdlapp-mac.xcscheme
buildfiles/apple/sdl2image.xcodeproj/: project.pbxproj
buildfiles/apple/sdl2image.xcodeproj/xcshareddata/xcschemes/: sdl2image.xcscheme
buildfiles/apple/sdl2ttf.xcodeproj/: project.pbxproj
buildfiles/apple/sdl2ttf.xcodeproj/xcshareddata/xcschemes/: sdl2ttf.xcscheme
buildfiles/apple/sdl3.xcodeproj/: project.pbxproj
buildfiles/apple/sdl3.xcodeproj/xcshareddata/xcschemes/: sdl3.xcscheme  sdl3test.xcscheme
buildfiles/apple/sdl3app.xcodeproj/: project.pbxproj
buildfiles/apple/sdl3app.xcodeproj/xcshareddata/xcschemes/: SDL3.xcscheme  sdl3app.xcscheme
buildfiles/apple/sdl3image.xcodeproj/: project.pbxproj
buildfiles/apple/sdl3ttf.xcodeproj/: project.pbxproj
buildfiles/cmake/: CMakeLists.txt
buildfiles/cmake/sdl2/: CMakeLists.txt
buildfiles/cmake/sdl2app/: CMakeLists.txt
buildfiles/cmake/sdl2image/: CMakeLists.txt
buildfiles/cmake/sdl2ttf/: CMakeLists.txt
buildfiles/cmake/sdl3/: CMakeLists.txt
buildfiles/cmake/sdl3/modules/: sdlchecks.cmake  sdltargets.cmake
buildfiles/cmake/sdl3image/: CMakeLists.txt
buildfiles/cmake/sdl3image/modules/: PrivateSdlFunctions.cmake
buildfiles/cmake/sdl3ttf/: CMakeLists.txt
buildfiles/cmake/sdl3ttf/modules/: PrivateSdlFunctions.cmake
buildfiles/windows/: sdl2app.sln  sdl3app.sln
buildfiles/windows/sdl2/: sdl2.sln  sdl2.vcxproj  sdl2.vcxproj.filters
buildfiles/windows/sdl2app/: sdl2app.vcxproj  sdl2app.vcxproj.filters
buildfiles/windows/sdl2image/: sdl2image.sln  sdl2image.vcxproj  sdl2image.vcxproj.filters
buildfiles/windows/sdl2main/: sdl2main.vcxproj
buildfiles/windows/sdl2ttf/: sdl2ttf.sln  sdl2ttf.vcxproj  sdl2ttf.vcxproj.filters
buildfiles/windows/sdl3/: sdl3.sln  sdl3.vcxproj  sdl3.vcxproj.filters
buildfiles/windows/sdl3app/: sdl3app.vcxproj  sdl3app.vcxproj.filters  version.aps
buildfiles/windows/sdl3image/: sdl3image.sln  sdl3image.vcxproj  sdl3image.vcxproj.filters
buildfiles/windows/sdl3ttf/: Version.aps  sdl3ttf.sln  sdl3ttf.vcxproj  sdl3ttf.vcxproj.filters
include/: SDL_app.h
include/SDL3_app/: SDL_app.h
scripts/: APP.md  MANIFEST.yml  android.py  app.py  apple.py  clean.py  cmake.py  iconify.py  release.py  util.py  windows.py
src/: APP_appinfo.c  APP_device.c  APP_sysappinfo.h  APP_version.c  README.md
src/android/: APP_sysappinfo.c  APP_sysdevice.c  APP_sysdisplay.c
src/device/: APP_device.c  APP_sysdevice.h
src/device/android/: APP_sysdevice.c
src/device/appkit/: APP_sysdevice.m
src/device/dummy/: APP_sysdevice.c
src/device/posix/: APP_sysdevice.cpp
src/device/uikit/: APP_sysdevice.m
src/device/windows/: APP_sysdevice.cpp
src/display/: APP_display.c  APP_sysdisplay.h
src/display/android/: APP_sysdisplay.c
src/display/appkit/: APP_sysdisplay.m  APP_sysinternals.h  APP_sysinternals.m
src/display/dummy/: APP_sysdisplay.c
src/display/uikit/: APP_sysdisplay.m  APP_sysinternals.h  APP_sysinternals.m
src/dummy/: APP_sysappinfo.c  APP_sysdevice.c  APP_sysdisplay.c
src/ios/: APP_sysappinfo.m  APP_sysdisplay.m
src/linux/: APP_sysdevice.cpp
src/macosx/: APP_sysappinfo.m  APP_sysdevice.m
src/windows/: APP_sysappinfo.cpp  APP_sysdevice.cpp
templates/: README.md
templates/android/__project__/: build.gradle
templates/android/__project__/app/: build.gradle  vvl_plugin.gradle
templates/apple/Frameworks/VkLayer_khronos_validation.xcframework/: Info.plist
templates/apple/Frameworks/vulkan.xcframework/: Info.plist
templates/apple/app.xcodeproj/: project.pbxproj
templates/cmake/: CMakeLists.txt  ReadMe.md
templates/cmake/flatpak/: VkLayer_khronos_validation.json  __APP_ID__-validation.yml  build.sh
templates/windows/: __project__.sln
templates/windows/__project__/: __project__.props  __project__.rc  __project__.vcxproj  resource.h
tutorials/: README.md
tutorials/base/: README.md  config.yml
tutorials/base/source/: main.cpp
tutorials/base/source/extras/: pattern.cpp  pattern.h
tutorials/tutorial1/: README.md  config.yml
tutorials/tutorial1/assets/shaders/: compile.sh
tutorials/tutorial1/source/: Main.cpp
tutorials/tutorial10/: README.md  config.yml
tutorials/tutorial10/assets/shaders/: compile.bat  shader.comp
tutorials/tutorial10/source/: Main.cpp  RenderThread.cpp  RenderThread.h
tutorials/tutorial11/: README.md  config.yml
tutorials/tutorial11/source/: Main.cpp
tutorials/tutorial2/: README.md  config.yml
tutorials/tutorial2/source/: Main.cpp
tutorials/tutorial3/: README.md  config.yml
tutorials/tutorial3/source/: Main.cpp
tutorials/tutorial4/: README.md  config.yml
tutorials/tutorial4/assets/shaders/: shader.frag
tutorials/tutorial4/source/: Main.cpp  image.h
tutorials/tutorial5/: README.md  config.yml
tutorials/tutorial5/source/: Main.cpp  image.h
tutorials/tutorial6/: README.md  config.yml
tutorials/tutorial6/source/: Main.cpp  image.h
tutorials/tutorial7/: README.md  config.yml
tutorials/tutorial7/source/: Main.cpp
tutorials/tutorial8/: README.md  config.yml
tutorials/tutorial8/source/: Main.cpp  image.h
tutorials/tutorial9/: README.md  config.yml
tutorials/tutorial9/assets/shaders/: compile.bat  compile.sh  shader.comp
tutorials/tutorial9/source/: Main.cpp
vulkan/: README.md
(+56 files in other folders)
